# aivi

./: .aiignore  .gitignore  AGENTS.md  AIVI_LANGUAGE.md  Cargo.toml  README.md  STDLIB_AUDIT_P0.md  STDLIB_AUDIT_SUMMARY.md  TESTING.md  guide.md  pnpm-lock.yaml  todo.md
crates/aivi/: Cargo.toml
crates/aivi/perf/: README.md  baseline.json
crates/aivi/perf/fixtures/: tiny.aivi  typecheck_medium.aivi
crates/aivi/src/: cst.rs  diagnostics.rs  formatter.rs  hir.rs  kernel.rs  lexer.rs  lib.rs  main.rs  mcp.rs  native_rust_backend.rs  pm.rs  resolver.rs  runtime.rs  rust_codegen.rs  rust_ir.rs  rustc_backend.rs  stdlib.rs  surface.rs  syntax.rs  typecheck.rs  wasm.rs
crates/aivi/src/formatter/: format_text_with_options_body.rs
crates/aivi/src/hir/: lower_blocks_and_patterns.rs  lower_expr.rs  tests.rs  types.rs
crates/aivi/src/kernel/: ir.rs  lowering.rs
crates/aivi/src/main/: cli.rs  commands.rs
crates/aivi/src/mcp/: manifest.rs  schema.rs
crates/aivi/src/native_rust_backend/: expr.rs  mod.rs  prelude.rs  utils.rs
crates/aivi/src/resolver/: debug_and_unused.rs  module_checks.rs
crates/aivi/src/runtime/: builtins.rs  environment.rs  http.rs  interpreter.rs  support.rs  tests.rs  values.rs
crates/aivi/src/runtime/builtins/: calendar.rs  collections.rs  color.rs  concurrency.rs  core.rs  crypto.rs  database.rs  graph.rs  linalg.rs  list.rs  log.rs  math.rs  mod.rs  number.rs  regex.rs  signal.rs  sockets.rs  streams.rs  system.rs  text.rs  ui.rs  url_http.rs
crates/aivi/src/runtime/runtime_impl/: eval_and_apply.rs  lifecycle_and_cancel.rs  resources.rs
crates/aivi/src/rust_ir/: lowering.rs  unbound_vars.rs
crates/aivi/src/rustc_backend/: build.rs  emit.rs
crates/aivi/src/stdlib/: bigint.rs  calendar.rs  collections.rs  color.rs  complex.rs  concurrency.rs  console.rs  core.rs  crypto.rs  database.rs  database_pool.rs  decimal.rs  duration.rs  file.rs  generator.rs  geometry.rs  graph.rs  i18n.rs  linalg_facade.rs  linear_algebra.rs  logic.rs  math.rs  matrix.rs  mod.rs  network_facade.rs  network_http.rs  network_http_server.rs  network_https.rs  network_sockets.rs  network_streams.rs  number_facade.rs  path.rs  prelude.rs  probability.rs  quaternion.rs  rational.rs  regex.rs  signal.rs  system.rs  testing.rs  (+5 more)
crates/aivi/src/surface/: ast.rs  desugar.rs  mod.rs  parser.rs  tests.rs
crates/aivi/src/typecheck/: builtins.rs  checker.rs  expected_coercions_tests.rs
crates/aivi/tests/: classes_and_syntax.rs  debug_lex.rs  debug_parse.rs  debug_pipeline.rs  examples_build.rs  examples_parse.rs  fmt_test.rs  golden_harness.rs  mcp_manifest.rs  native_codegen.rs  native_codegen_examples.rs  native_i18n_sigils.rs  native_index_paths.rs  parse_golden.rs  pm_install_strict.rs  pm_manifest_edit.rs  pm_scaffold.rs  repro_fmt.rs  runtime_smoke.rs  rust_codegen.rs  typecheck_core.rs  wasm_codegen.rs  workspace_expand_target.rs
crates/aivi/tests/fixtures/: hello.cst.json
crates/aivi/tests/goldens/: README.md
crates/aivi_native_runtime/: Cargo.toml
crates/aivi_native_runtime/src/: lib.rs  values.rs
crates/aivi_native_runtime/src/builtins/: database.rs  ui.rs
crates/aivi_native_runtime/src/values/: core.rs  equality.rs
examples/: 10_wasm.aivi  (+40 more)
(+353 files in other folders)
