[package]
name = "aivi"
version = "0.1.0"
edition = "2021"

[dependencies]
aivi_http_server = { path = "../aivi_http_server" }
chrono = "0.4.38"
num-bigint = "0.4.6"
num-rational = "0.4.2"
num-traits = "0.2.19"
palette = "0.7.5"
regex = "1.10.6"
rust_decimal = "1.36.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
sha2 = "0.10.8"
thiserror = "1.0.63"
toml = "0.8.20"
toml_edit = "0.22.27"
tokio = { version = "1.40.0", features = ["rt", "sync"] }
rudo-gc = { version = "0.8.2", features = ["derive"] }
unicode-normalization = "0.1.24"
unicode-segmentation = "1.11.0"
url = "2.5.2"

[dev-dependencies]
tempfile = "3.12.0"
