[package]
name = "aivi_native_runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
getrandom = "0.2.15"
im = "15.1.0"
num-bigint = "0.4.6"
num-rational = "0.4.2"
num-traits = "0.2.19"
ordered-float = "4.2.2"
palette = "0.7.5"
regex = "1.10.6"
rust_decimal = "1.36.0"
rustfft = "6.2.0"
sha2 = "0.10.8"
serde_json = "1.0.133"
tokio = { version = "1.40.0", features = ["rt", "sync"] }
unicode-normalization = "0.1.24"
unicode-segmentation = "1.11.0"
url = "2.5.2"
ureq = "2.10.1"
uuid = { version = "1.10.0", features = ["v4"] }
thiserror = "1.0.63"

aivi_http_server = { path = "../aivi_http_server" }
